# ink

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  run.py  tsconfig.json
config/: latch_patterns.yaml
docs/: prd.md
docs/architecture/: README.md  components.md  data-flow.md  ddd-architecture.md  layer-architecture.md  system-overview.md
examples/: standard_cells.pindir
resources/: resources.qrc
resources/icons/: README.md
scripts/: convert-specs-to-frontmatter.py
scripts/clickup/: sync-specs-to-clickup.ts
scripts/workflow/: clickup-pr-sync.sh
specs/: README.md  parallelization-analysis.md
specs/E01/: E01-parallelization.md  E01.pre-docs.md  E01.spec.md
specs/E01/F01/: E01-F01.spec.md
specs/E01/F01/T01/: E01-F01-T01-implementation-narrative.md  E01-F01-T01.post-docs.md  E01-F01-T01.pre-docs.md  E01-F01-T01.spec.md
specs/E01/F01/T02/: E01-F01-T02-implementation-narrative.md  E01-F01-T02.post-docs.md  E01-F01-T02.pre-docs.md  E01-F01-T02.spec.md
specs/E01/F01/T03/: E01-F01-T03-implementation-narrative.md  E01-F01-T03.context.md  E01-F01-T03.post-docs.md  E01-F01-T03.pre-docs.md  E01-F01-T03.spec.md
specs/E01/F01/T04/: E01-F01-T04-implementation-narrative.md  E01-F01-T04.post-docs.md  E01-F01-T04.pre-docs.md  E01-F01-T04.spec.md
specs/E01/F01/T05/: E01-F01-T05-implementation-narrative.md  E01-F01-T05.post-docs.md  E01-F01-T05.pre-docs.md  E01-F01-T05.spec.md
specs/E01/F01/T06/: E01-F01-T06-implementation-narrative.md  E01-F01-T06.post-docs.md  E01-F01-T06.pre-docs.md  E01-F01-T06.spec.md
specs/E01/F02/: E01-F02.spec.md
specs/E01/F02/T01/: E01-F02-T01-implementation-narrative.md  E01-F02-T01.post-docs.md  E01-F02-T01.pre-docs.md  E01-F02-T01.spec.md
specs/E01/F02/T02/: E01-F02-T02-implementation-narrative.md  E01-F02-T02.post-docs.md  E01-F02-T02.pre-docs.md  E01-F02-T02.spec.md
specs/E01/F02/T03/: E01-F02-T03-implementation-narrative.md  E01-F02-T03.post-docs.md  E01-F02-T03.pre-docs.md  E01-F02-T03.spec.md
specs/E01/F03/: E01-F03.spec.md
specs/E01/F03/T01/: E01-F03-T01-implementation-narrative.md  E01-F03-T01.post-docs.md  E01-F03-T01.pre-docs.md  E01-F03-T01.spec.md
specs/E01/F03/T02/: E01-F03-T02-implementation-narrative.md  E01-F03-T02.post-docs.md  E01-F03-T02.pre-docs.md  E01-F03-T02.spec.md
specs/E01/F03/T03/: E01-F03-T03-implementation-narrative.md  E01-F03-T03.post-docs.md  E01-F03-T03.pre-docs.md  E01-F03-T03.spec.md
specs/E01/F03/T04/: E01-F03-T04-implementation-narrative.md  E01-F03-T04.post-docs.md  E01-F03-T04.pre-docs.md  E01-F03-T04.spec.md
specs/E01/F04/: E01-F04.spec.md
specs/E01/F04/T01/: E01-F04-T01-implementation-narrative.md  E01-F04-T01.context.md  E01-F04-T01.post-docs.md  E01-F04-T01.pre-docs.md  E01-F04-T01.spec.md
specs/E01/F04/T02/: E01-F04-T02-implementation-narrative.md  E01-F04-T02.context.md  E01-F04-T02.post-docs.md  E01-F04-T02.pre-docs.md  E01-F04-T02.spec.md
specs/E01/F04/T03/: E01-F04-T03-implementation-narrative.md  E01-F04-T03.post-docs.md  E01-F04-T03.pre-docs.md  E01-F04-T03.spec.md
specs/E01/F04/T04/: E01-F04-T04-implementation-narrative.md  E01-F04-T04.context.md  E01-F04-T04.post-docs.md  E01-F04-T04.spec.md
specs/E02/: E02-parallelization.md  E02.pre-docs.md  E02.spec.md
specs/E02/F01/: E02-F01.spec.md
specs/E02/F01/T01/: E02-F01-T01-implementation-narrative.md  E02-F01-T01.context.md  E02-F01-T01.post-docs.md  E02-F01-T01.pre-docs.md  E02-F01-T01.spec.md
specs/E02/F01/T02/: E02-F01-T02-implementation-narrative.md  E02-F01-T02.post-docs.md  E02-F01-T02.pre-docs.md  E02-F01-T02.spec.md
specs/E02/F01/T03/: E02-F01-T03-implementation-narrative.md  E02-F01-T03.post-docs.md  E02-F01-T03.pre-docs.md  E02-F01-T03.spec.md
specs/E02/F01/T04/: E02-F01-T04-implementation-narrative.md  E02-F01-T04.post-docs.md  E02-F01-T04.pre-docs.md  E02-F01-T04.spec.md
specs/E02/F01/T05/: E02-F01-T05.post-docs.md  (+3 more)
specs/E02/F02/: E02-F02.spec.md
specs/E02/F03/: E02-F03.spec.md
specs/E02/F04/: E02-F04.spec.md
specs/E02/F05/: E02-F05.spec.md
specs/E03/: E03-parallelization.md  E03.pre-docs.md  E03.spec.md
specs/E03/F01/: E03-F01.spec.md
specs/E03/F02/: E03-F02.spec.md
specs/E03/F03/: E03-F03.spec.md
specs/E03/F04/: E03-F04.spec.md
specs/E04/: E04-parallelization.md  E04.pre-docs.md  E04.spec.md
specs/E04/F01/: E04-F01.spec.md
specs/E04/F02/: E04-F02.spec.md
specs/E04/F03/: E04-F03.spec.md
specs/E04/F04/: E04-F04.spec.md
specs/E05/: E05-parallelization.md  E05.pre-docs.md  E05.spec.md
specs/E05/F01/: E05-F01.spec.md
specs/E05/F02/: E05-F02.spec.md
specs/E05/F03/: E05-F03.spec.md
specs/E05/F04/: E05-F04.spec.md
specs/E05/F05/: E05-F05.spec.md
specs/E06/: E06-parallelization.md  E06.pre-docs.md  E06.spec.md
specs/E06/F01/: E06-F01.spec.md
specs/E06/F02/: E06-F02.spec.md
specs/E06/F03/: E06-F03.spec.md
specs/E06/F04/: E06-F04.spec.md
specs/E06/F05/: E06-F05.spec.md
specs/E06/F06/: E06-F06.spec.md
src/ink/: __init__.py  __main__.py  main.py
src/ink/domain/: __init__.py
src/ink/infrastructure/: __init__.py
src/ink/presentation/: __init__.py  main_window.py  resources_rc.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_application_startup.py
tests/integration/presentation/: __init__.py  test_acceptance_criteria.py  test_main_window_canvas.py  test_main_window_docks.py  test_main_window_integration.py  test_panel_state_integration.py  test_recent_files_menu.py  test_toolbar_icons.py  test_window_geometry_persistence.py  test_zoom_lod_integration.py  test_zoom_status_integration.py
tests/performance/: __init__.py  test_networkx_adapter_performance.py  test_startup_performance.py
tests/unit/: __init__.py
tests/unit/presentation/: test_edit_menu.py  test_file_menu_actions.py  test_main_window.py  test_main_window_file_status.py  test_main_window_panel_persistence.py  test_main_window_selection_status.py  test_main_window_status.py  test_main_window_zoom_status.py  test_panel_reset.py  test_panel_toggle_actions.py  test_toolbar.py  test_toolbar_file_edit_search.py  test_view_help_menus.py
(+356 files in other folders)
